Render tree construction is O(N^2) in number of siblings https://bugs.webkit.org/show_bug.cgi?id=129065

Source/WebCore:

Reviewed by Darin Adler.

When adding a new renderer to the tree we would search for the correct render tree
position by traversing DOM children forward to find something that already has a renderer.
In common case there is no such renderer. This would be repeated for each inserted renderer
leading to O(n^2) in respect to child node count.

This patch caches the computed render tree insertion position and passes it to siblings.
Until the cached position is reached it can be used for all new renderers.

Test: perf/sibling-renderer-On2.html

* style/StyleResolveTree.cpp:
(WebCore::Style::RenderTreePosition::parent):
(WebCore::Style::RenderTreePosition::RenderTreePosition):
(WebCore::Style::RenderTreePosition::canInsert):
(WebCore::Style::RenderTreePosition::insert):
(WebCore::Style::RenderTreePosition::computeNextSibling):
(WebCore::Style::RenderTreePosition::invalidateNextSibling):
(WebCore::Style::styleForElement):
(WebCore::Style::elementInsideRegionNeedsRenderer):
(WebCore::Style::createRendererIfNeeded):
(WebCore::Style::createTextRendererIfNeeded):
(WebCore::Style::attachTextRenderer):
(WebCore::Style::updateTextRendererAfterContentChange):
(WebCore::Style::attachChildren):
(WebCore::Style::attachDistributedChildren):
(WebCore::Style::attachShadowRoot):
(WebCore::Style::attachBeforeOrAfterPseudoElementIfNeeded):
(WebCore::Style::attachRenderTree):
(WebCore::Style::resolveLocal):
(WebCore::Style::resolveTextNode):
(WebCore::Style::resolveShadowTree):
(WebCore::Style::updateBeforeOrAfterPseudoElement):
(WebCore::Style::resolveTree):

LayoutTests:

Reviewed by Darin Adler.

* perf/sibling-renderer-On2-expected.txt: Added.
* perf/sibling-renderer-On2.html: Added.

    The test doesn't use magnitude-perf.js as this requires a relatively long-running test function and
    it seemed unsuitable for that.



Canonical link: https://commits.webkit.org/148825@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166303 268f45cc-cd09-0410-ab3c-d52691b4dbfc